--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Scene/LevelSelect.LevelSelect
-EditorStartupMap=/Game/Scene/JunkyardPlanet/JunkyardIntro.JunkyardIntro
+EditorStartupMap=/Game/Scene/JerodManor/JerodManor.JerodManor
 GlobalDefaultGameMode=/Game/Game/DefaultGameMode.DefaultGameMode_C
 GameInstanceClass=/Game/Game/StabGameInstance.StabGameInstance_C
 
