Replace level select with hub

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Scene/LevelSelect.LevelSelect
+GameDefaultMap=/Game/Scene/LevelHub.LevelHub
 EditorStartupMap=/Game/Scene/JerodManor/JerodManor.JerodManor
 GlobalDefaultGameMode=/Game/Game/DefaultGameMode.DefaultGameMode_C
 GameInstanceClass=/Game/Game/StabGameInstance.StabGameInstance_C
