--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Scene/LevelHub.LevelHub
-EditorStartupMap=/Game/Scene/JerodManor/JerodManor.JerodManor
+EditorStartupMap=/Game/Scene/LevelHub.LevelHub
 GlobalDefaultGameMode=/Game/Game/DefaultGameMode.DefaultGameMode_C
 GameInstanceClass=/Game/Game/StabGameInstance.StabGameInstance_C
 
