--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Scene/LevelHub.LevelHub
+GameDefaultMap=/Game/Scene/MessageQueue.MessageQueue
 EditorStartupMap=/Game/Scene/LevelHub.LevelHub
 GlobalDefaultGameMode=/Game/Game/DefaultGameMode.DefaultGameMode_C
 GameInstanceClass=/Game/Game/StabGameInstance.StabGameInstance_C
