Set up sandbox for scrapyard forcefield test

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Scene/MessageQueue.MessageQueue
-EditorStartupMap=/Game/Scene/LevelHub.LevelHub
+EditorStartupMap=/Game/Scene/DevOnly/Sandbox.Sandbox
 GlobalDefaultGameMode=/Game/Game/DefaultGameMode.DefaultGameMode_C
 GameInstanceClass=/Game/Game/StabGameInstance.StabGameInstance_C
 
